To JDK 25 #3